--- a/folio/templates/index.html
+++ b/folio/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Folio Coming Soon</title>
+    <title>FOLIO Coming Soon</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
@@ -13,17 +13,17 @@
     <link href="/static/css/grid12.css" rel="stylesheet" media="screen">
     <!-- Grid System -->
     <link href="/static/css/james_typography.css" rel="stylesheet" media="screen">
-    <!-- James Framework - TYPOGRAPHY -->
+    <!-- James F/static/ramework - TYPOGRAPHY -->
     <link href="/static/css/main.css" rel="stylesheet" media="screen">
-    <!-- Main CSS file -->
+    <!-- Main CS/static/S file -->
     <link href="/static/css/color_scheme_light.css" rel="stylesheet" media="screen">
-    <!-- Color scheme (dark/light)-->
-    <!-- Color palette -->
+    <!-- Color s/static/cheme (dark/light)-->
+    <link href="/static/css/colors/color_palette_lime.css" rel="stylesheet" media="screen">
+    <!-- Color p/static/alette -->
     <link href="/static/css/rapid-icons.css" rel="stylesheet" media="screen">
-    <!-- James Framework - ICONS -->
-    <link href="/static/css/colors/color_palette_red.css" rel="stylesheet" media="screen">
+    <!-- James F/static/ramework - ICONS -->
     <link href="/static/css/js_styles/jquery.maximage.min.css" rel="stylesheet" media="screen">
-    <!-- MaxImage background image slideshow -->
+    <!-- MaxImag/static/e background image slideshow -->
     <link href="/static/css/responsivity.css" rel="stylesheet" media="screen">
     <!-- Responsive Fixes -->
 
@@ -32,7 +32,6 @@
 </head>
 
 <body>
-
 <div id="preloader_container">
 
     <!-- Preloader Screen -->
@@ -58,10 +57,6 @@
         <div class="container top_bar">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-                    <!--
-                    <img src="images/logo_light.png" alt="logo" class="logo" />
-                    -->
                     <nav class="navigation_desktop">
                         <ul>
                             <li><a href="#more_info" id="more_info_btn"
@@ -84,6 +79,29 @@
 
 
                 <!-- Timer (put class="timer" in Homepage section if you want timer to be shown)-->
+                <div id="countdown" class="countdown">
+                    <div class="countdown_part first">
+                        <h1 class="days">00</h1>
+
+                        <p class="timeRefDays">days</p>
+                    </div>
+                    <div class="countdown_part">
+                        <h1 class="hours">00</h1>
+
+                        <p class="timeRefHours">hours</p>
+                    </div>
+                    <div class="countdown_part">
+                        <h1 class="minutes">00</h1>
+
+                        <p class="timeRefMinutes">minutes</p>
+                    </div>
+                    <div class="countdown_part last">
+                        <h1 class="seconds">00</h1>
+
+                        <p class="timeRefSeconds">seconds</p>
+                    </div>
+                </div>
+                <!-- //Timer -->
 
 
                 <h6>If you would like to be notified when the big day comes, <br class="hidden-xs">please leave your
@@ -92,13 +110,10 @@
 
                 <!-- Newsletter Form (put class="newsletter" in Homepage section if you want newsletter form to be shown)-->
                 <div class="newsletter_form">
-                    <form action="{% url 'home' %}" method="post" id="subscribe-form">
-                        {% csrf_token %}
+                    <form action="php/send.php" method="post" id="subscribe-form">
                         <div class="input-field">
                             <div data-icon="&#xe563;" class="prefix"></div>
                             <input id="email" type="email" name="email" class="validate">
-                            <span id="email_unhappy" class="unhappyMessage" role="alert">Email already exist!</span>
-                            <span id="email_unhappy" class="happyMessage" role="alert">Thanks for Subscribing</span>
                             <label for="email">Email address</label>
                         </div>
                         <button class="btn waves-effect waves-light subscribe-submit" type="submit" name="action"
@@ -117,6 +132,18 @@
 
         <!-- Mockups (put class="mockups" in Homepage section if you want mockups to be shown)-->
         <!-- /Mockup 1-->
+        <div class="mockup mockup-right mockup-animation1">
+            <img src="images/mockups/1/back.png" alt="logo"/>
+        </div>
+        <!-- //Mockup 1-->
+
+
+        <!-- /Mockup 2-->
+        <div class="mockup mockup-right mockup-animation2">
+            <img src="images/mockups/1/front.png" alt="logo"/>
+        </div>
+        <!-- //Mockup 2-->
+
 
         <!-- Social Icons -->
         <div class="container ">
@@ -147,8 +174,24 @@
 
 
         <!-- Video Background -->
-
+        <div id="maximage_video">
+            <video autoplay="autoplay" loop="loop" muted="muted" width="896" height="504">
+                <source src="video/video.mp4" type="video/mp4"/>
+                <source src="video/video.webm" type="video/webm"/>
+                <source src="video/video.ogv" type="video/ogg"/>
+            </video>
+        </div>
         <!-- //Video Background -->
+
+
+        <!-- Slider Background -->
+        <div id="maximage_slider">
+            <img src="images/background_slider_01.jpg" alt=""/>
+            <img src="images/background_slider_02.jpg" alt=""/>
+            <img src="images/background_slider_03.jpg" alt=""/>
+            <img src="images/background_slider_04.jpg" alt=""/>
+        </div>
+        <!-- //Slider Background -->
 
 
         <!-- Single Image Background -->
@@ -166,35 +209,39 @@
     <section id="more_info">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h3>About Us</h3>
+                <div class="col-xs-12 col-sm-5 col-md-5 col-lg-12">
+                    <h3>About Folio</h3>
 
-                    <p>James is a responsive "under construction" page. It will fit perfectly as a placeholder for your
-                        website or landing page.</p>
+                    <p>Folio has helped several computer science students to learn new skills by providing free ebooks. But now coming as a online book store.</p>
 
-                    <p>It comes with several content and background variants. James is also equiped with some cool
-                        devices mockups for app version.</p>
+                    <p>Folio will also be equiped with some cool
+                        features like.</p>
 
                     <ul class="icon_list">
                         <li>
-                            <div data-icon="&#xe1ab;" class="icon_small float-left"></div>
-                            <h6>Timer, contact & newsletter form</h6></li>
-                        <li>
-                            <div data-icon="&#xe1d7;" class="icon_small float-left"></div>
-                            <h6>Image, slider, video backgrounds</h6></li>
-                        <li>
-                            <div data-icon="&#xe027;" class="icon_small float-left"></div>
-                            <h6>Mobile App mockups</h6></li>
+                            <div data-icon="&#xe0b8;" class="icon_small float-left"></div>
+                            <h6>School Books Packets</h6>
+                        </li>
                         <li>
                             <div data-icon="&#xe0b8;" class="icon_small float-left"></div>
-                            <h6>Over 1500 icons included</h6></li>
+                            <h6>Compitative Exams Books</h6>
+                        </li>
+                        <li>
+                            <div data-icon="&#xe0b8;" class="icon_small float-left"></div>
+                            <h6>Engineering/Management books</h6>
+                        </li>
+                        <li>
+                            <div data-icon="&#xe0b8;" class="icon_small float-left"></div>
+                            <h6>Delivery withing 18 hours.</h6>
+                        </li>
+                        <li>
+                            <div data-icon="&#xe0b8;" class="icon_small float-left"></div>
+                            <h6>Return Policies.</h6>
+                        </li>
                     </ul>
 
-                    <p>James has of corse well formated and commented code and comes with in depth documentation.</p>
+
                 </div>
-
-                <!-- Contact Form Section -->
-
 
             </div>
         </div>
@@ -237,32 +284,20 @@
 <!-- Retina.j/static/s - support for HiDPI Displays -->
 <script src="/static/js/main.js"></script>
 <!-- Main Js file -->
+
+
+<!-- Show message after newsletter form submit -->
 <script type="text/javascript">
     $('document').ready(function () {
         $('#subscribe-form').ajaxForm({
-            url: "{% url 'home' %}", // the endpoint
-            type: "POST", // http method
-            data: {email: $('#email').val()}, // data sent with the post request
-
-            // handle a successful response
-            success: function (json) {
-                $('#post-text').val(''); // remove the value from the input
-                console.log(json); // log the returned json to the console
-                console.log("success"); // another sanity check
-            },
-
-            // handle a non-successful response
-            error: function (xhr, errmsg, err) {
-                $('#results').html("<div class='alert-box alert radius' data-alert>Oops! We have encountered an error: " + errmsg +
-                        " <a href='#' class='close'>&times;</a></div>"); // add the error to the dom
-                console.log(xhr.status + ": " + xhr.responseText); // provide a bit more info about the error to the console
+            target: '#preview',
+            success: function () {
+                $('#preview').addClass("show_message");
             }
         });
     });
 
 </script>
-
-<!-- Show message after newsletter form submit -->
 
 </body>
 
