--- a/folio/templates/index.html
+++ b/folio/templates/index.html
@@ -225,7 +225,7 @@
                         </li>
                         <li>
                             <div data-icon="&#xe0b8;" class="icon_small float-left"></div>
-                            <h6>Compitative Exams Books</h6>
+                            <h6>Competitive Exams Books</h6>
                         </li>
                         <li>
                             <div data-icon="&#xe0b8;" class="icon_small float-left"></div>
