--- a/folio/templates/index.html
+++ b/folio/templates/index.html
@@ -18,7 +18,7 @@
     <!-- Main CS/static/S file -->
     <link href="/static/css/color_scheme_light.css" rel="stylesheet" media="screen">
     <!-- Color s/static/cheme (dark/light)-->
-    <link href="/static/css/colors/color_palette_lime.css" rel="stylesheet" media="screen">
+    <link href="/static/css/colors/color_palette_red.css" rel="stylesheet" media="screen">
     <!-- Color p/static/alette -->
     <link href="/static/css/rapid-icons.css" rel="stylesheet" media="screen">
     <!-- James F/static/ramework - ICONS -->
@@ -57,6 +57,8 @@
         <div class="container top_bar">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <img src="/static/images/Folio_logo.png" alt="logo" style="width: 100px;" class="logo"/>
+
                     <nav class="navigation_desktop">
                         <ul>
                             <li><a href="#more_info" id="more_info_btn"
