--- a/folio/templates/index.html
+++ b/folio/templates/index.html
@@ -217,7 +217,7 @@
                     <p>Folio has helped several computer science students to learn new skills by providing free ebooks.
                         But now coming as a online book store.</p>
 
-                    <p>Folio will also be equiped with some cool
+                    <p>Folio will also be equipped with some cool
                         features like.</p>
 
                     <ul class="icon_list">
