--- a/folio/templates/ecommerce/bookdetail.html
+++ b/folio/templates/ecommerce/bookdetail.html
@@ -71,9 +71,9 @@
                             <li class="tab col s3"><a href="#test4">Review</a></li>
                         </ul>
                     </div>
-                    <div id="test1" class="col s12">Test 1</div>
-                    <div id="test2" class="col s12">Test 2</div>
-                    <div id="test4" class="col s12">Test 4</div>
+                    <div id="test1" class="col s12">Information Here</div>
+                    <div id="test2" class="col s12">Description Here</div>
+                    <div id="test4" class="col s12">Review Here</div>
                 </div>
 
                 <div class="row">
