template bug fix

--- a/folio/templates/ecommerce/base/header.html
+++ b/folio/templates/ecommerce/base/header.html
@@ -1,44 +1,38 @@
 <header id="header" class="page-topbar">
-    <!-- start header nav-->
-    <div class="navbar-fixed">
-        <nav class="navbar-color">
-            <div class="nav-wrapper">
-                <ul class="left">
-                    <li>
-                        <h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img
-                                src="/static/ecommerce/images/Folio_logo.png" style="height: 40px;"
-                                alt="Folio logo"></a> <span class="logo-text">Folio</span></h1></li>
-                </ul>
-                <div class="header-search-wrapper hide-on-med-and-down">
-                    <i class="mdi-action-search"></i>
-                    <input type="text" name="Search" class="header-search-input z-depth-2"
-                           placeholder="Find your Book Here"/>
-
+        <!-- start header nav-->
+        <div class="navbar-fixed">
+            <nav class="navbar-color">
+                <div class="nav-wrapper">
+                    <ul class="left">
+                        <li>
+                            <h1 class="logo-wrapper"><a href="{% url 'demo' %}" class="brand-logo darken-1"><img src="/static/ecommerce/images/Folio_logo.png" style="height: 40px;" alt="Folio logo"></a> <span class="logo-text">Folio</span></h1></li>
+                    </ul>
+                    <div class="header-search-wrapper hide-on-med-and-down">
+                        <i class="mdi-action-search"></i>
+                        <input type="text" name="Search" class="header-search-input z-depth-2" placeholder="Find your Book Here" />
+                        
+                    </div>
+                    <ul class="right">
+                        
+                        <li><a href="javascript:void(0);" class="waves-effect waves-block waves-light notification-button" data-activates="notifications-dropdown"><i class="mdi-social-notifications"><small class="notification-badge">0</small></i>
+                        
+                        </a>
+                        </li>
+                    </ul>
+                   
+                    <!-- notifications-dropdown -->
+                    <ul id="notifications-dropdown" class="dropdown-content">
+                        <li>
+                            <h5>NOTIFICATIONS <span class="new badge">0</span></h5>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#!"><i class="mdi-action-add-shopping-cart"></i> You have no notifications</a>
+                            <time class="media-meta" datetime="2015-06-12T20:50:48+08:00">2 hours ago</time>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="right">
-
-                    <li><a href="javascript:void(0);" class="waves-effect waves-block waves-light notification-button"
-                           data-activates="notifications-dropdown"><i class="mdi-social-notifications">
-                        <small class="notification-badge">0</small>
-                    </i>
-
-                    </a>
-                    </li>
-                </ul>
-
-                <!-- notifications-dropdown -->
-                <ul id="notifications-dropdown" class="dropdown-content">
-                    <li>
-                        <h5>NOTIFICATIONS <span class="new badge">0</span></h5>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#!"><i class="mdi-action-add-shopping-cart"></i> You have no notifications</a>
-                        <time class="media-meta" datetime="2015-06-12T20:50:48+08:00">2 hours ago</time>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <!-- end header nav-->
-</header>
+            </nav>
+        </div>
+        <!-- end header nav-->
+    </header>
