--- a/folio/templates/ecommerce/index2.html
+++ b/folio/templates/ecommerce/index2.html
@@ -1,5 +1,8 @@
 {% extends 'ecommerce/base/base.html' %}
 {% block main_content %}
+    <div class="hide-on-large-only" style="padding-top: 20px;">
+     <he></he>
+    </div>
     <div id="breadcrumbs-wrapper">
         <div class="container">
             <div class="row">
